--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">NYCSchools</string>
+    <string name="app_name">NYC Schools</string>
+    <string name="critical_reading_text">Critical Reading: %1$s</string>
+    <string name="math_text">Math: %1$s</string>
+    <string name="writing_text">Writing: %1$s</string>
 </resources>
